修复文章格式

--- a/source/_posts/162问题描述.md
+++ b/source/_posts/162问题描述.md
@@ -1,6 +1,8 @@
 ---
 title: 162. 寻找峰值
-
+date: 2019-7-31 19:23:25
+tags:
+ - Python
 categories:
  - 算法
 ---
@@ -17,6 +19,8 @@ categories:
 数组可能包含多个峰值，在这种情况下，返回任何一个峰值所在位置即可。
 
 你可以假设 `nums[-1] = nums[n] = -∞`。
+
+<!-- more -->
 
 **示例 1:**
 
