--- a/source/_posts/19问题描述.md
+++ b/source/_posts/19问题描述.md
@@ -1,7 +1,8 @@
 ---
 title: 19. 删除链表的倒数第N个节点
+date: 2019-1-31 4:45:35
 tags:
- - python
+ - Python
  - leetcode
 ---
 
@@ -29,7 +30,7 @@ tags:
 
 ### 解决方案
 
-**双指针的策略**
+#### 双指针的策略
 
 - 设置快、慢两个节点
 - 快节点向前走N步
@@ -60,7 +61,7 @@ class Solution(object):
         return head
 ``````
 
-另一种巧妙的方式
+#### 另一种巧妙的方式
 
 相当于使指针设置在了头结点前，消除了一些边界情况
 
@@ -75,6 +76,5 @@ def removeNthFromEnd(self, head, n):
             slow = slow.next
         fast = fast.next
     slow.next = slow.next.next
-    return self.next   
+    return self.next
 ``````
-
