--- a/source/_posts/问题描述.md
+++ b/source/_posts/问题描述.md
@@ -29,11 +29,11 @@ tags:
 
 正常情况下当front == rear是队列有可能是满也有可能是空，为了区分这两种情况 我们需要在front前添加一个闲置单元。
 
-![](http://ww1.sinaimg.cn/large/d126accegy1g1z044bgxyj20li06bq41.jpg)
+![tututu](http://ww1.sinaimg.cn/large/d126accegy1g1z044bgxyj20li06bq41.jpg)
 
 ***show me the code***
 
-``````
+``````python
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
 """
@@ -122,7 +122,4 @@ if __name__ == '__main__':
     print(a.Rear())
     print(a.queue)
     print(a.Front())
-
-
 ``````
-
