--- a/source/_posts/21问题描述.md
+++ b/source/_posts/21问题描述.md
@@ -2,16 +2,17 @@
 title: 21. 合并两个有序链表
 tags:
  - leetcode
+ - Python
 categories:
  - 计算机技术
 ---
 ## 问题描述
 
-将两个有序链表合并为一个新的有序链表并返回。新链表是通过拼接给定的两个链表的所有节点组成的。 
+将两个有序链表合并为一个新的有序链表并返回。新链表是通过拼接给定的两个链表的所有节点组成的。
 <!-- more -->
 **示例：**
 
-```
+```python
 输入：1->2->4, 1->3->4
 输出：1->1->2->3->4->4
 ```
