--- a/source/_posts/跨域.md
+++ b/source/_posts/跨域.md
@@ -18,10 +18,6 @@ tags:
 
 > 只要协议、域名、端口有任何一个不同，都被当作是不同的域，之间的请求就是跨域操作。
 
-
-
-
-
 ### 为什么要有跨域限制
 
 了解完跨域之后，想必大家都会有这么一个思考，为什么要有跨域的限制，浏览器这么做是出于何种原因呢。其实仔细想一想就会明白，跨域限制主要是为了安全考虑。
@@ -108,14 +104,12 @@ class CORSMiddleware(MiddlewareMixin):
         return response
 ```
 
-
-
 #### jsonp实现跨域
 
 基本原理就是通过动态创建script标签,然后利用src属性进行跨域。
 这么说比较模糊，我们来看个例子:
 
-```
+```HTML
 <script>
 //定义一个fun函数
 function fun(data) { 
@@ -163,7 +157,7 @@ window.name跨域同样是受到同源策略限制，父框架和子框架的src
 
 代码如下：
 
-```
+```HTML
 //a页面的代码
 <script type="text/javascript">
     iframe = document.createElement('iframe');
@@ -187,9 +181,7 @@ window.name跨域同样是受到同源策略限制，父框架和子框架的src
 </script>
 ```
 
-
-
-```
+```HTML
 //b页面代码
 <script type="text/javascript">
     window.name = "hello";
@@ -204,7 +196,7 @@ location.hash方式跨域，是子框架具有修改父框架src的hash值，通
 
 代码如下:
 
-```
+```HTML
 //a页面的代码
 <script type="text/javascript">
     iframe = document.createElement('iframe');
@@ -238,7 +230,7 @@ window.top方法可以访问最顶层的window对象，可以取到最顶层wind
 
 代码如下：
 
-```
+```HTML
 //a页面代码
 <script type="text/javascript">
     function funa(){
