--- a/source/_posts/14. 不修改数组找出重复的数字.md
+++ b/source/_posts/14. 不修改数组找出重复的数字.md
@@ -14,10 +14,9 @@ categories:
 
 请找出数组中任意一个重复的数，但不能修改输入的数组。
 <!-- more -->
+### 样例
 
-#### 样例
-
-```
+```text
 给定 nums = [2, 3, 5, 4, 3, 2, 6, 7]。
 
 返回 2 或 3。
