--- a/source/_posts/定位服务公司面试复盘.md
+++ b/source/_posts/定位服务公司面试复盘.md
@@ -19,7 +19,7 @@ tags:
 
 ### 公司背景：
 
-- 一家创业公司规模在100人的样子
+- 一家创业公司
 - 做定位服务
 
 ### 招聘要求：
@@ -55,10 +55,9 @@ tags:
 - 没有表现出自己对这个职位的热情
 
 
-
 ### 总结：
 
-学历来说，我应该是所有面试者中具有优势的
+我应该是所有面试者中具有优势的
 
 还是自信问题，一定要自信
 
